# broker_parrot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
conductor/: pyproject.toml
conductor/queue_workflows_conductor/: web.py
deploy/: run_claim_lane.sh
deploy/k8s/: README.md  broker-web.yaml  broker-worker.yaml  config.yaml  llm-servers.yaml
docs/: architecture.md  box_placement.md  broker.md  conductor.md  configuration.md  deployment.md  gpu_and_llm.md  gpu_pool.md  hw_watch.md  llm_topology.example.yml  redis_mongo_engine_rehome.md  schema.md  setup.md  storage_backends.md  watchdogs.md  worker_control.md
docs/use_cases/: 01_box_power_loss.md  02_box_boot_and_rejoin.md  03_operator_stop_and_park.md  04_wedged_gpu_recovery.md  05_dag_pipeline.md  06_periodic_ingest.md  07_multi_project_broker.md  08_warm_model_affinity.md  09_urgent_job_run_next.md  10_human_in_the_loop.md  README.md
queue_workflows/: __init__.py  box_agent.py  broker.py  claim_worker.py  comfyui.py  conductor.py  config.py  db.py  dialect.py  dispatcher.py  envcompat.py  gpu_health.py  gpu_model_cache.py  gpu_model_lease.py  gpu_pool.py  hw_feed.py  hw_metrics.py  hw_watch.py  ingest_executor.py  ingest_store.py  llm_idle_unload.py  llm_probe.py  model_cache.py  model_residency.py  node_executor.py  node_pool.py  node_queue.py  refs.py  run_store.py  scheduler.py  worker_control.py  worker_supervisor.py
queue_workflows/backends/: __init__.py
queue_workflows/broker_service/: __init__.py  orchestrator.py  permission.py  schema.py  web.py  worker.py
queue_workflows/builtin_nodes/: __init__.py  comfyui.py
queue_workflows/llm_backends/: factory.py  supervisor.py  topology.py
queue_workflows/migrations/: 0008_multitenant_ingest.down.sql  0008_multitenant_ingest.sql  0012_worker_controls.down.sql  0012_worker_controls.sql  0014_worker_heartbeats_llm_servers.sql  0018_node_events_project.down.sql  0018_node_events_project.sql  (+5 more)
tests/: conftest.py  test_awaiting_input_spec.py  test_box_agent.py  test_box_server_arbitration.py  test_broker_consolidation.py  test_broker_service_grants.py  test_broker_web.py  test_broker_worker.py  test_capacity_assignment.py  test_claim_worker.py  test_comfyui_builtin_node.py  test_comfyui_pool_gate.py  test_comfyui_tenant.py  test_conductor_cli.py  test_conductor_web.py  test_cpu_worker_count.py  test_db_pool_size.py  test_dead_worker_sweep.py  test_dispatcher_skip_if.py  test_drain_end_to_end.py  test_env_compat.py  test_error_snapshot.py  test_fast_zombie_reclaim.py  test_fleet_snapshot.py  test_gpu_box_model_lease_gate.py  test_gpu_box_slot_gate.py  test_gpu_health.py  test_gpu_idle_activity.py  test_gpu_idle_unload.py  test_gpu_llm_cpu_refuse.py  test_gpu_model_lease.py  test_gpu_pool.py  test_heartbeat_llm_probe.py  test_hw_feed.py  test_hw_metrics_flock.py  test_hw_metrics_gpu_probe.py  test_hw_watch.py  test_inference_server_lifecycle.py  test_ingest_queue.py  test_lease_reclaim_sweep.py  (+26 more)
(+42 files in other folders)
